blog spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,7 @@ main {
   background: rgba(128, 128, 128, 0.1);
   margin-top: 25px;
   padding-bottom: 100px;
+  margin-bottom: -100px;
   padding-top: 25px;
   border-top: 2px solid rgba(35, 4, 43, 0.05);
 }
